<resources>
    <string name="app_name">明眸</string>
    <string name="font_size_label">字体大小：%1$dsp</string>
    <string name="flash_light_button">闪光灯按钮</string>
    <string name="camera_button">拍照按钮</string>
    <string name="btnToggleDirection">切换内容滑动方向</string>
    <string name="increase_font_size">+</string>
    <string name="decrease_font_size">-</string>
    <string name="toggle_speech_button">"切换语音播报状态"</string>
    <string name="scan_mode_button">扫描模式切换</string>
    <string name="AutoRead">开启自动播报</string>
    <string name="camera_switch_button">切换摄像头</string> <!-- 中文 -->
</resources>